[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/MultiNote.gd" type="Script" id=1]
[ext_resource path="res://src/FontColorPicker.tscn" type="PackedScene" id=2]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[node name="MultiNote" type="Button"]
margin_left = 5.0
margin_top = 5.0
margin_right = 1019.0
margin_bottom = 105.0
rect_min_size = Vector2( 0, 120 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="TextEdit" parent="MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 1009.0
margin_bottom = 115.0
rect_min_size = Vector2( 0, 100 )
mouse_filter = 1
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "test"
bookmark_gutter = true
caret_blink = true

[node name="ColorPickerButton" parent="MarginContainer/TextEdit" instance=ExtResource( 2 )]
anchor_bottom = 1.0
margin_left = -12.0
margin_bottom = 0.0
text_edit_path = NodePath("..")

[connection signal="text_changed" from="MarginContainer/TextEdit" to="." method="_on_TextEdit_text_changed"]
[connection signal="color_changed" from="MarginContainer/TextEdit/ColorPickerButton" to="." method="set_font_color"]
